Core/A. Container orchestration - Kubernetes/Ingress/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard 
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  #   cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  # tls:  # in case of using tls secret
  # - hosts: 
  #   - view.com
  #   secretName: dashboard-tls-secret  # reference to the secret
  rules:
  - host: view.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
